[package]
name = "gitseek"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tantivy = "=0.25.0"
thiserror = "2.0.17"
time = "=0.3.37"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
toml = "0.9.8"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.23.0"
